--- a/src/packages/modules/global-header-footer/css/_responsive-navbar.scss
+++ b/src/packages/modules/global-header-footer/css/_responsive-navbar.scss
@@ -1248,6 +1248,7 @@
   .sprite-32a-sony-logo {
     margin-top:12px;
     margin-left:-36px;
+    -webkit-transform: none; // override the flicker fix on iPad, to fix blurry icon on Android. Oh, joy!
   }
 }
 
